# cld_pyAnormalyDetector

./: .gitignore  CLAUDE.md  LICENSE  README.md  default.yml  detect_anomalies.py  detect_fast.py  pyproject.toml  secret.example.yml  update_stats.py
clustering/: __init__.py  dbscan.py
config/: __init__.py  loader.py  schema.py
db/: __init__.py  mysql.py  postgresql.py
detectors/: __init__.py  base.py  changepoint.py  ensemble.py  fast.py  seasonal.py  zscore.py
evaluation/: __init__.py  backtester.py  metrics.py  synthetic.py  types.py
features/: __init__.py  gating.py  hour_stats.py  rolling_stats.py
ingestion/: __init__.py  base.py  csv_source.py  factory.py  zabbix_mysql.py  zabbix_psql.py
pipeline/: __init__.py  detection.py  fast_detection.py  filters.py  stats_update.py
scripts/: export-anomalies.sh  healthcheck.py  label-ui.sh  setup.sh
scripts/cron/: anomdec-env.sh  run-detect-fast.sh  run-detect.sh  run-label-queue.sh  run-update-stats.sh
store/: __init__.py  anomalies.py  base.py  history.py  stats.py
tests/integration/: test_pipeline_csv.py
tests/testdata/csv/20250508/psql/: labels.csv
tests/unit/: test_changepoint_detector.py  test_clustering.py  test_dashboard.py  test_ensemble_detector.py  test_fast_detection.py  test_gating.py  test_label_queue.py  test_metrics.py  test_seasonal_detector.py  test_zscore_detector.py
tools/: _dashboard.py  _zabbix.py  export_anomalies.py  export_dashboard_items.py  label_queue.py  labeling_ui.py  prepare_labeling_dashboard.py  publish_dashboard.py  sample_prod.py
