[project]
name = "pyAnomalyDetector"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ui = [
    "dash>=2.14",
    "plotly>=5.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
anomdec-detect        = "detect_anomalies:main"
anomdec-detect-fast   = "detect_fast:main"
anomdec-update-stats  = "update_stats:main"
anomdec-sample            = "tools.sample_prod:main"
anomdec-label-queue       = "tools.label_queue:main"
anomdec-dashboard         = "tools.prepare_labeling_dashboard:main"
anomdec-export-dashboard  = "tools.export_dashboard_items:main"
anomdec-label             = "tools.labeling_ui:main"

[tool.hatch.build.targets.wheel]
packages = [
    "clustering",
    "config",
    "db",
    "detectors",
    "evaluation",
    "features",
    "ingestion",
    "pipeline",
    "store",
    "tools",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
